	* Download and install Collect.apk
	* Start Collect
	* Choose your downloaded .collect-mobile file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your .collect-mobile file in the file chooser


Changes
-------

2015-07-30

    * Added support for latest Collect Desktop version

2015-07-20

    * Fixed the problem where high-resolution images could slow down, or even crash, the app.

2015-06-11

    * From now on, tabs in survey are ignored. Groupings of attributes can still be done through entities.

2015-05-26

    * Added action button for "previous" and a "smart-next"
    * Updated support for default values
    * Minor bug fixes

2015-05-06

    * Fixed a bug that could cause a crash when accessing a code attribute

2015-05-05

    * Added overview tables, providing an overview of entered data and allows for quick navigation.

2015-04-15

    * Added the possibility to share exported data though email, Bluetooth, DropBox, Google Drive etc.

2015-04-14

    * Added support for multiple surveys

2015-03-19

    * Added support for latest Collect Desktop version
    * Fixed problem with validation of code attributes with multiplicity, rendered as checkboxes

2014-11-17

    * Fixed bug that could cause crash when initializing taxon attribute

2014-11-04

    * Added support for capturing and selecting images

2014-10-24

    * Fixed bug that crashed surveys with enumerated entities

2014-10-22

    * Fixed broken scrolling in older Android versions
    * Fixed overlapping radio buttons/checkboxes in older Android versions
    * Fixes to relevance and validation state

2014-10-20

    * Ignored irrelevant child nodes when determining an entity's validation status

2014-10-17
