@@ -1,34 +1,55 @@
 package org.openforis.collect.android.gui.input;
 
+import android.os.Handler;
 import android.support.v4.app.FragmentActivity;
 import android.text.Editable;
 import android.view.KeyEvent;
 import android.view.View;
 import android.view.inputmethod.EditorInfo;
 import android.widget.AdapterView;
-import android.widget.AutoCompleteTextView;
+import android.widget.LinearLayout;
 import android.widget.TextView;
 import org.apache.commons.lang3.StringUtils;
 import org.openforis.collect.android.SurveyService;
 import org.openforis.collect.android.gui.ServiceLocator;
+import org.openforis.collect.android.gui.util.ClearableAutoCompleteTextView;
+import org.openforis.collect.android.util.LanguageNames;
 import org.openforis.collect.android.viewmodel.UiTaxon;
 import org.openforis.collect.android.viewmodel.UiTaxonAttribute;
+import org.openforis.collect.android.viewmodelmanager.TaxonService;
+
+import java.util.Map;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 /**
  * @author Daniel Wiell
  */
 public class TaxonAttributeComponent extends AttributeComponent<UiTaxonAttribute> {
-    private AutoCompleteTextView autoComplete;
+    private LinearLayout layout;
+    private final ExecutorService executor = Executors.newSingleThreadExecutor();
+    private ClearableAutoCompleteTextView autoComplete;
+    private LinearLayout commonNamesLayout;
     private UiTaxon selectedTaxon;
 
     protected TaxonAttributeComponent(UiTaxonAttribute attribute, SurveyService surveyService, FragmentActivity context) {
         super(attribute, surveyService, context);
         createAutoComplete(attribute, context);
 
+        commonNamesLayout = new LinearLayout(context);
+        commonNamesLayout.setOrientation(LinearLayout.VERTICAL);
+        commonNamesLayout.setPadding(8, 16, 8, 0);
+
+        layout = new LinearLayout(context);
+        layout.setOrientation(LinearLayout.VERTICAL);
+        layout.addView(autoComplete);
+        layout.addView(commonNamesLayout);
+
+        loadCommonNames();
     }
 
     private void createAutoComplete(UiTaxonAttribute attribute, FragmentActivity context) {
-        autoComplete = new AutoCompleteTextView(context);
+        autoComplete = new ClearableAutoCompleteTextView(context);
         autoComplete.setThreshold(1);
         autoComplete.setSingleLine();
         if (attribute.getTaxon() != null) {
@@ -57,6 +78,12 @@ public class TaxonAttributeComponent extends AttributeComponent<UiTaxonAttribute
                 return false;
             }
         });
+        autoComplete.setOnClearListener(new ClearableAutoCompleteTextView.OnClearListener() {
+            public void onClear() {
+                autoComplete.setText("");
+                commonNamesLayout.removeAllViews();
+            }
+        });
         autoComplete.setAdapter(new UiTaxonAdapter(context, attribute, ServiceLocator.taxonService()));
     }
 
@@ -67,6 +94,7 @@ public class TaxonAttributeComponent extends AttributeComponent<UiTaxonAttribute
     protected boolean updateAttributeIfChanged() {
         UiTaxon newTaxon = selectedTaxon();
         if (hasChanged(newTaxon)) {
+            loadCommonNames();
             attribute.setTaxon(selectedTaxon);
             notifyAboutAttributeChange();
             return true;
@@ -75,10 +103,12 @@ public class TaxonAttributeComponent extends AttributeComponent<UiTaxonAttribute
     }
 
     protected View toInputView() {
-        return autoComplete;
+        return layout;
     }
 
     private UiTaxon selectedTaxon() {
+        commonNamesLayout.removeAllViews();
+        loadCommonNames();
         Editable editable = autoComplete.getText();
         if (editable == null)
             throw new IllegalStateException("autoComplete text is null");
@@ -118,4 +148,38 @@ public class TaxonAttributeComponent extends AttributeComponent<UiTaxonAttribute
         autoComplete.setAdapter(adapter);
     }
 
+    private void loadCommonNames() {
+        executor.execute(new LoadCommonNamesTask());
+    }
+
+    private class LoadCommonNamesTask implements Runnable {
+        /**
+         * Handle bound to main thread, to post updates to AutoCompleteTextView on the main thread.
+         * The AutoCompleteTextView itself might not yet be bound to the window.
+         */
+        Handler uiHandler = new Handler();
+
+        public void run() {
+            TaxonService taxonService = ServiceLocator.taxonService();
+            UiTaxon taxon = attribute.getTaxon();
+            if (taxon == null)
+                return;
+
+            final Map<String, String> nameByLanguage = taxonService.commonNameByLanguage(
+                    taxon.getCode(), attribute.getDefinition().taxonomy
+            );
+            uiHandler.post(new Runnable() {
+                public void run() {
+                    commonNamesLayout.removeAllViews();
+                    for (Map.Entry<String, String> entry : nameByLanguage.entrySet()) {
+                        String language = entry.getKey();
+                        String name = entry.getValue();
+                        TextView textView = new TextView(context);
+                        textView.setText(name + " (" + LanguageNames.nameOfIso3(language) + ")");
+                        commonNamesLayout.addView(textView);
+                    }
+                }
+            });
+        }
+    }
 }
