@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+
+    <TextView
+            android:id="@android:id/text1"
+            style="?android:attr/dropDownItemStyle"
+            android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="?attr/standardPadding"
+            android:paddingLeft="?attr/standardPadding"
+            android:paddingRight="?attr/standardPadding"
+    />
+
+    <TextView
+            android:id="@android:id/text2"
+            style="?android:attr/textAppearanceSmall"
+            android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="?attr/standardPadding"
+            android:paddingRight="?attr/standardPadding"
+            android:paddingBottom="?attr/standardPadding"
+    />
+</LinearLayout>
